# openclaw-installer

./: .gitignore  Cargo.toml  README.md  manifest.json
.cargo/: config.toml
.github/workflows/: ci.yml  package.yml
crates/launcher-app/: Cargo.toml
crates/launcher-app/src/: app.rs  browser.rs  diagnostics.rs  install_root.rs  launch_flow.rs  launcher.rs  logging.rs  main.rs  metadata.rs  state.rs
crates/launcher-app/tests/: dashboard_url_tests.rs  diagnostics_tests.rs  install_root_tests.rs  launch_flow_tests.rs  logging_tests.rs  manifest_display_tests.rs  state_tests.rs
crates/launcher-app/ui/: main-window.slint
crates/process-supervisor/: Cargo.toml
crates/runtime-config/: Cargo.toml
docs/notes/: 2026-03-16-local-worktree-record.md
docs/plans/: 2026-03-13-openclaw-windows-native-installer-design.md  2026-03-13-openclaw-windows-native-installer-implementation-plan.md  2026-03-14-openclaw-launcher-start-flow-design.md  2026-03-14-openclaw-launcher-start-flow-implementation-plan.md  2026-03-14-openclaw-runtime-source-selection-design.md  2026-03-14-openclaw-runtime-source-selection-implementation-plan.md  2026-03-14-openclaw-windows-payload-pruning-design.md  2026-03-14-openclaw-windows-payload-pruning-implementation-plan.md  2026-03-15-openclaw-launcher-logging-and-win10-support-design.md  2026-03-15-openclaw-launcher-logging-and-win10-support-implementation-plan.md  (+3 more)
scripts/: build-launcher-win-x64-git-bash.sh  build-launcher-win-x64-linux.sh  build-win-x64-git-bash.sh  build-win-x64.sh  prune-windows-payload.sh  smoke-launcher.sh  verify-payload.sh
(+27 files in other folders)
