[package]
name = "launcher-app"
version = "0.1.0"
build = "build.rs"
edition = "2021"

[dependencies]
slint = "1.14"
async-compat = "0.2"
runtime-config = { path = "../runtime-config" }
process-supervisor = { path = "../process-supervisor" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
slint-build = "1.14"
